<resources>
    <string name="app_name">CanvasClone_3</string>
    <string name="login">Login</string>
    <string name="enter_username">Enter Username</string>
    <string name="enter_password">Enter Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="preference_file_key">CanvasClone_3PreferenceFileNameCanvasClone</string>
    <string name="preference_user_ID_key">CanvasClone_3PreferenceUserIDCanvasClone</string>
    <string name="add_new_course">Add New Course</string>
    <string name="course_code">Course Code</string>
    <string name="course_name">Course Name</string>
    <string name="percentage">Percentage</string>
    <string name="assignments">Assignments</string>
    <string name="user_id">User ID</string>
    <string name="add_course">Add Course</string>
    <string name="create_account">Create Account</string>
    <string name="create_username">Create Username</string>
    <string name="create_password">Create Password</string>
    <string name="register">Register</string>
    <string name="upcoming_assignments">Upcoming Assignments:</string>
    <string name="username">username</string>
    <string name="my_courses">My Courses</string>
    <string name="logout">Logout</string>
    <string name="dashboard">Dashboard</string>
</resources>